# ethsnarks-cheerp

./: .gitignore  CMakeLists.txt  Makefile  compile-error.cpp  libff.patch  notes.txt
